nicen up file tests a bit

--- a/recipes/adept/meta.yaml
+++ b/recipes/adept/meta.yaml
@@ -26,13 +26,12 @@ requirements:
 
 test:
   commands:
-    - test -L $PREFIX/lib/libadept.so  # [linux]
-    - test -L $PREFIX/lib/libadept.dylib  # [osx]
+    - test -L $PREFIX/lib/libadept$SHLIB_EXT
     - test -f $PREFIX/lib/libadept.so.0.0.0  # [linux]
-    - test -f $PREFIX/lib/libadept.a  # [linux or osx]
-    - test -f $PREFIX/lib/libadept.la  # [linux or osx]
-    - test -f $PREFIX/lib/libadept.0.dylib  # [osx]
-    - test -f $PREFIX/include/adept.h  # [linux or osx]
+    - test -f $PREFIX/lib/libadept.0.dylib   # [osx]
+    - test -f $PREFIX/lib/libadept.a
+    - test -f $PREFIX/lib/libadept.la
+    - test -f $PREFIX/include/adept.h
 
 about:
   home: http://www.met.reading.ac.uk/clouds/adept/
