fix download url

--- a/recipes/adept/meta.yaml
+++ b/recipes/adept/meta.yaml
@@ -9,7 +9,7 @@ package:
 
 source:
   fn: {{ name }}-{{ version }}.tar.gz
-  url: https://www.met.reading.ac.uk/clouds/adept/adept-{{ version }}.tar.gz
+  url: http://www.met.reading.ac.uk/clouds/adept/adept-{{ version }}.tar.gz
   sha256: {{ sha256 }}
 
 build:
