try working around _mm_undefined_ps problem  [skip appveyor]

--- a/recipes/adept/meta.yaml
+++ b/recipes/adept/meta.yaml
@@ -11,6 +11,10 @@ source:
   fn: {{ name }}-{{ version }}.tar.gz
   url: http://www.met.reading.ac.uk/clouds/adept/adept-{{ version }}.tar.gz
   sha256: {{ sha256 }}
+  patches:
+    # Old Clang doesn't have _mm_undefined_ps; use same workaround as for
+    # old gcc.
+    - _mm_undefined_ps.patch  # [osx]
 
 build:
   number: {{ build_number }}
