add comment about patch  [skip ci]

--- a/recipes/adept/meta.yaml
+++ b/recipes/adept/meta.yaml
@@ -13,7 +13,7 @@ source:
   sha256: {{ sha256 }}
   patches:
     # Old Clang doesn't have _mm_undefined_ps; use same workaround as for
-    # old gcc.
+    # old gcc; https://github.com/rjhogan/Adept-2/issues/7
     - _mm_undefined_ps.patch  # [osx]
 
 build:
