Address review comments

--- a/recipes/implicit/meta.yaml
+++ b/recipes/implicit/meta.yaml
@@ -14,7 +14,6 @@ source:
 build:
   number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
-  skip: True  # [not x86_64]
 
 requirements:
   build:
@@ -22,13 +21,13 @@ requirements:
     - setuptools
     - toolchain
     - cython >=0.24
-    - gcc  # [linux or osx]
+    - gcc  # [unix]
     - numpy 1.10.*  # [not (win and py36)]
     - numpy 1.11.*  # [win and py36]
-    - scipy >=0.16
+    - scipy
   run:
     - python
-    - libgcc  # [linux or osx]
+    - libgcc  # [unix]
     - numpy >=1.10  # [not (win and py36)]
     - numpy >=1.11  # [win and py36]
     - scipy >=0.16
@@ -44,7 +43,6 @@ about:
   license_family: MIT
   license_file: 'LICENSE'
   summary: 'Fast Python Collaborative Filtering for Implicit Datasets.'
-
   description: |
       This project provides fast Python implementations of the algorithms
       described in the paper Collaborative Filtering for Implicit Feedback
