--- a/recipes/pyobjcryst/meta.yaml
+++ b/recipes/pyobjcryst/meta.yaml
@@ -16,7 +16,6 @@ source:
 build:
   number: 0
   skip: True  # [win or py2k or osx]
-  script: python setup.py install
 
 requirements:
   build:
@@ -28,6 +27,7 @@ requirements:
     - libobjcryst 2017.1.*  # [py3k]
     - boost 1.61.0          # [py3k]
     - scons
+    - toolchain
   run:
     - python
     - setuptools
