--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -56,7 +56,7 @@ install:
 build: off
 
 test_script:
-    - conda build-all recipes --matrix-conditions "numpy >=1.11" "r-base ==3.3.2|==3.4.1"
+    - conda build-all recipes --matrix-conditions "numpy >=1.11" "python >=2.7,<3|>=3.5" "r-base ==3.3.2|==3.4.1"
     # copy any newly created conda packages into the conda_packages dir
     - cmd: mkdir conda_packages
     # Uncomment the following two lines to make any conda packages created
