--- a/recipes/pyobjcryst/meta.yaml
+++ b/recipes/pyobjcryst/meta.yaml
@@ -15,7 +15,7 @@ source:
 
 build:
   number: 0
-  skip: True  # [win or py2k or osx]
+  skip: True  # [win]
   script: python setup.py install
 
 requirements:
@@ -27,7 +27,6 @@ requirements:
     - boost-all 1.59.0      # [py2k]
     - libobjcryst 2017.1.*  # [py3k]
     - boost 1.61.0          # [py3k]
-    - scons
     - toolchain
   run:
     - python
