--- a/recipes/pyobjcryst/meta.yaml
+++ b/recipes/pyobjcryst/meta.yaml
@@ -15,16 +15,14 @@ source:
 
 build:
   number: 0
-  skip: True  # [win]
+  skip: True  # [win or py2k]
   script: python setup.py install
 
 requirements:
   build:
     - python
     - setuptools
-    - numpy 1.11.2
-    - libobjcryst 2015.1.*  # [py2k]
-    - boost-all 1.59.0      # [py2k]
+    - numpy 1.11.*
     - libobjcryst 2017.1.*  # [py3k]
     - boost 1.61.0          # [py3k]
     - toolchain
@@ -32,8 +30,6 @@ requirements:
     - python
     - setuptools
     - numpy >=1.11.2
-    - libobjcryst 2015.1.*  # [py2k]
-    - boost-all 1.59.0      # [py2k]
     - libobjcryst 2017.1.*  # [py3k]
     - boost 1.61.0          # [py3k]
 
