--- a/recipes/pyobjcryst/meta.yaml
+++ b/recipes/pyobjcryst/meta.yaml
@@ -13,7 +13,7 @@ source:
 
 build:
   number: 0
-  skip: True  # [win or py2k]
+  skip: True  # [win or py2k or osx]
   script: python setup.py install
 
 requirements:
