Pin scipy 0.16 in build

--- a/recipes/implicit/meta.yaml
+++ b/recipes/implicit/meta.yaml
@@ -24,7 +24,8 @@ requirements:
     - gcc  # [unix]
     - numpy 1.10.*  # [not (win and py36)]
     - numpy 1.11.*  # [win and py36]
-    - scipy
+    # implicit cimports BLAS from scipy
+    - scipy 0.16.*
   run:
     - python
     - libgcc  # [unix]
