Use scipy 0.18 on Windows with PY3.6

--- a/recipes/implicit/meta.yaml
+++ b/recipes/implicit/meta.yaml
@@ -25,13 +25,15 @@ requirements:
     - numpy 1.10.*  # [not (win and py36)]
     - numpy 1.11.*  # [win and py36]
     # implicit cimports BLAS from scipy
-    - scipy 0.16.*
+    - scipy 0.16.*  # [not (win and py36)]
+    - scipy 0.18.*  # [win and py36]
   run:
     - python
     - libgcc  # [unix]
     - numpy >=1.10  # [not (win and py36)]
     - numpy >=1.11  # [win and py36]
-    - scipy >=0.16
+    - scipy >=0.16  # [not (win and py36)]
+    - scipy >=0.18  # [win and py36]
 
 test:
   imports:
