--- a/recipes/fltk/meta.yaml
+++ b/recipes/fltk/meta.yaml
@@ -2,7 +2,7 @@
 {% set name = "fltk" %}
 {% set version = "1.3.4" %}
 {% set longversion = "1.3.4-2" %}
-{% set md5 = "b8e291343357e49dd81a22408744e400" %}
+{% set md5 = "69128be72365cbedd1d380739f0164e3" %}
 
 package:
   name: {{ name|lower }}
@@ -10,14 +10,8 @@ package:
 
 source:
   fn: {{ name }}-{{ longversion }}-source.tar.gz
-  url: http://fltk.org/pub/{{ name }}/{{ version }}/{{ name }}-{{ longversion }}-source.tar.gz
-  # md5 does not reconcile, even though it does when I fetch with `curl -O`.
-  # I'm guessing this is something FLTK is doing wrong with mirroring, 
-  # because md5 doesn't match when I download from the browswer, either.
-  # Ah, because of faulty(?) `Content-Encoding: x-gzip`, Chrome and conda 
-  # are gunzipping: 
-  # https://superuser.com/questions/940605/chromium-prevent-unpacking-tar-gz
-  # md5: {{ md5 }}
+  url: http://fltk.org/pub/{{ name }}/{{ version }}/{{ name }}-{{ longversion }}-source.tar.bz2
+  md5: {{ md5 }}
 
 build:
   number: 0
