--- a/recipes/fltk/meta.yaml
+++ b/recipes/fltk/meta.yaml
@@ -22,14 +22,9 @@ requirements:
     - cmake
 
 test:
-  # Some package might need a `test/commands` key to check CLI.
-  # List all the packages/modules that `run_test.py` imports.
-  # imports:
-  #   - toolchain
-  # source_files:
-  #   - test
-  # commands:
-  #   - cd 
+  # there are no explict tests to be done
+  # `(n)make test` is run during `build`
+  # the examples are all GUIs so nothing to automate
 
 about:
   home: http://www.fltk.org/
