--- a/recipes/pyobjcryst/meta.yaml
+++ b/recipes/pyobjcryst/meta.yaml
@@ -13,7 +13,7 @@ source:
 
 build:
   number: 0
-  skip: True  # [win or py2k or osx]
+  skip: True  # [win or py2k]
   script: python setup.py install
 
 requirements:
@@ -21,15 +21,15 @@ requirements:
     - python
     - setuptools
     - numpy 1.11.*
-    - libobjcryst 2017.1.*  # [py3k]
-    - boost 1.61.0          # [py3k]
+    - libobjcryst 2017.1.*
+    - boost 1.65.1
     - toolchain
   run:
     - python
     - setuptools
     - numpy >=1.11.2
-    - libobjcryst 2017.1.*  # [py3k]
-    - boost 1.61.0          # [py3k]
+    - libobjcryst 2017.1.*
+    - boost 1.65.1
 
 test:
   imports:
