corrected the license family name

--- a/recipes/example/django-reversion-compare/meta.yaml
+++ b/recipes/example/django-reversion-compare/meta.yaml
@@ -27,7 +27,7 @@ requirements:
 about:
   home: https://github.com/jedie/django-reversion-compare
   license: GPLv3
-  license_family: GNU General Public License
+  license_family: GPL3
   license_file: LICENSE
   summary: 'Add compare view to django-reversion for comparing two versions of a reversion model.'
   description: 
