--- a/recipes/example/django-reversion-compare/meta.yaml
+++ b/recipes/example/django-reversion-compare/meta.yaml
@@ -24,6 +24,11 @@ requirements:
     - python
     - django >=1.8
 
+test:
+  imports:
+    - reversion_compare
+    - reversion_compare_tests
+
 about:
   home: https://github.com/jedie/django-reversion-compare
   license: GPLv3
