--- a/recipes/meta.yaml
+++ b/recipes/meta.yaml
@@ -14,10 +14,10 @@ package:
   version: {{ version }}
 
 source:
-  fn: {{ name }}-{{ version }}.tar.gz
+  fn: {{ name|lower }}-{{ version }}.tar.gz
   # If getting the source from GitHub remove the line above
   # uncomment the line below and modify as needed
-  url: https://github.com/ncar/{{ name }}/archive/{{ version }}.tar.gz
+  url: https://github.com/ncar/{{ name|lower }}/archive/v{{ version }}.tar.gz
   sha256: {{ sha256 }}
 
 build:
@@ -40,16 +40,17 @@ requirements:
     # if your project compiles code (such as a C extension) then add `toolchain` as a build requirement.
     - make
     - netcdf-fortran 4.4.4
-    - gcc >= 6.0
-    - liblapack-dev # [linux]
-    - atlas # [os x]
+#    - gcc >=6.0
+#    - liblapack-dev # [linux]
+    - blas
+#    - atlas # [osx]
   run:
     - libnetcdff 4.4.4
     - libgcc  # [linux]
     - libgfortran  # [osx]
     - liblapack
     - libblas
-    - libatlas # [os x]
+    - libatlas # [osx]
 
 test:
   commands:
