Skip windows altogether

--- a/recipes/aenum/meta.yaml
+++ b/recipes/aenum/meta.yaml
@@ -14,7 +14,7 @@ source:
 build:
   number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
-  skip: True  # [win and py3k or win32 ]
+  skip: True  # [win]
 
 requirements:
   build:
