Fix UTF-8 quotes and undo windows skip

--- a/recipes/python-pkcs11/meta.yaml
+++ b/recipes/python-pkcs11/meta.yaml
@@ -14,7 +14,6 @@ source:
 build:
   number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
-  skip: True  # [win]
 
 requirements:
   build:
@@ -39,7 +38,7 @@ about:
   summary: 'A high level Python interface to the PKCS#11 (Cryptoki) standard to support HSM and Smartcard devices'
 
   description: |
-      A high level, “more Pythonic” interface to the PKCS#11 (Cryptoki) standard to support
+      A high level, "more Pythonic" interface to the PKCS#11 (Cryptoki) standard to support
       HSM and Smartcard devices in Python.
       The interface is designed to follow the logical structure of a HSM, with useful
       defaults for obscurely documented parameters. Many APIs will optionally accept
