--- a/recipes/pyblake2/meta.yaml
+++ b/recipes/pyblake2/meta.yaml
@@ -22,28 +22,18 @@ build:
 
 requirements:
   build:
-    - python  # [win]
-
-requirements:
-  build:
     - python
     - toolchain
-    - msinttypes  # [win]
-    - vc 9        # [win and py27]
-    - vc 10       # [win and py34]
-    - vc 14       # [win and py>=35]
+    - msinttypes  # [win and py<35]
     - pip
   run:
     - python
-    - vc 9    # [win and py27]
-    - vc 10   # [win and py34]
-    - vc 14   # [win and py>=35]
 
 test:
   imports:
     - pyblake2
   commands:
-    - conda inspect linkages {{ name|lower }}  # [linux]
+    - conda inspect linkages {{ name|lower }}  # [unix]
     - conda inspect objects {{ name|lower }}   # [osx]
 
 
