--- a/recipes/python-xxhash/meta.yaml
+++ b/recipes/python-xxhash/meta.yaml
@@ -1,6 +1,7 @@
 {% set version = '1.0.1' %}
 {% set sha256 = '7abe69c9d02374385e23d0e7d6279d5fa03899989d25b381d837fa46cf294831' %}
-{% set name = 'xxhash' %}
+{% set pip_name = 'xxhash' %}
+{% set name = 'python-xxhash' %}
 
 package:
   name: {{ name|lower }}
@@ -9,7 +10,7 @@ package:
 source:
   #fn: {{ name }}-{{ version }}.zip
   sha256: {{ sha256 }}
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.zip
+  url: https://pypi.io/packages/source/{{ pip_name[0] }}/{{ pip_name }}/{{ pip_name }}-{{ version }}.zip
 
 build:
   number: 0
@@ -24,7 +25,7 @@ requirements:
     - pip
   run:
     - python
-    
+
 test:
   # Python imports
   imports:
