Simplifies meta.yaml
Configured as if the packages that we need are available

--- a/recipes/meta.yaml
+++ b/recipes/meta.yaml
@@ -14,7 +14,6 @@ package:
   version: {{ version }}
 
 source:
-  fn: {{ name|lower }}-{{ version }}.tar.gz
   # If getting the source from GitHub remove the line above
   # uncomment the line below and modify as needed
   url: https://github.com/ncar/{{ name|lower }}/archive/v{{ version }}.tar.gz
@@ -40,10 +39,10 @@ requirements:
     # if your project compiles code (such as a C extension) then add `toolchain` as a build requirement.
     - make
     - netcdf-fortran 4.4.4
-#    - gcc >=6.0
-#    - liblapack-dev # [linux]
+    - gfortran >=6.0
+    - liblapack-dev # [linux]
     - blas
-#    - atlas # [osx]
+    - atlas # [osx]
   run:
     - libnetcdff 4.4.4
     - libgcc  # [linux]
@@ -52,14 +51,11 @@ requirements:
     - libblas
     - libatlas # [osx]
 
-test:
+# test:
   commands:
-    - bin/summa.exe -v
-#   # Some package might need a `test/commands` key to check CLI.
-#   # List all the packages/modules that `run_test.py` imports.
-#   imports:
-#     - simplejson
-#     - simplejson.tests
+    - summa.exe -v
+   # Some package might need a `test/commands` key to check CLI.
+   # List all the packages/modules that `run_test.py` imports.
 
 about:
   home: http://github.com/ncar/summa
@@ -72,7 +68,7 @@ about:
   # It is strongly encouraged to include a license file in the package,
   # (even if the license doesn't require it) using the license_file entry.
   # See http://conda.pydata.org/docs/building/meta-yaml.html#license-file
-  license_file: LICENSE.txt
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE.txt'
   summary: 'Hydrologic modeling framework'
 
   # The remaining entries in this section are optional, but recommended
@@ -92,4 +88,3 @@ extra:
     # GitHub IDs for maintainers of the recipe.
     # Always check with the people listed below if they are OK becoming maintainers of the recipe. (There will be spam!)
     - bartnijssen
-    - arbennett
