--- a/recipes/summa/meta.yaml
+++ b/recipes/summa/meta.yaml
@@ -1,42 +1,22 @@
-# Note: there are many handy hints in comments in this example -- remove them when you've finalized your recipe
-
-# Jinja variables help maintain the recipe as you'll update the version only here.
 {% set name = "SUMMA" %}
 {% set version = "2.0.0" %}
 {% set sha256 = "f117aaa889ac785cbde4cd236ec4ed8afacdc91df4a3cdfb6de0f7492d974d97" %}
-# sha256 is the prefered checksum -- you can get it for a file with:
-#  `openssl sha256 <file name>`.
-# You may need the openssl package, available on conda-forge
-#  `conda install openssl -c conda-forge``
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  # If getting the source from GitHub remove the line above
-  # uncomment the line below and modify as needed
   url: https://github.com/ncar/{{ name|lower }}/archive/v{{ version }}.tar.gz
   sha256: {{ sha256 }}
 
 build:
-  # Uncomment the following line if the package is pure python and the recipe is exactly the same for all platforms.
-  # It is okay if the dependencies are not built for all platforms/versions, although selectors are still not allowed.
-  # See https://conda-forge.org/docs/meta.html#building-noarch-packages for more details.
-  # noarch: python
   number: 0
-  # If the installation is complex, or different between Unix and Windows, use separate bld.bat and build.sh files instead of this key.
-  # By default, the package will be built for the Python versions supported by conda-forge and for all major OSs.
-  # Add the line "skip: True  # [py<35]" (for example) to limit to Python 3.5 and newer, or "skip: True  # [not win]" to limit to Windows.
   skip: true # [win]
-  # script: python setup.py install --single-version-externally-managed --record record.txt
 
 requirements:
   build:
-    # - python
-    # When setuptools is available add the `--single-version-externally-managed --record record.txt` above.
-    # - setuptools
-    # if your project compiles code (such as a C extension) then add `toolchain` as a build requirement.
+    - toolchain
     - make
     - netcdf-fortran 4.4.4
     - gfortran >=6.0
@@ -51,27 +31,16 @@ requirements:
     - libblas
     - libatlas # [osx]
 
-# test:
   commands:
     - summa.exe -v
-   # Some package might need a `test/commands` key to check CLI.
-   # List all the packages/modules that `run_test.py` imports.
 
 about:
   home: http://github.com/ncar/summa
-  # Remember to specify the license variants for BSD, Apache, GPL, and LGLP.
-  # Prefer the short version, e.g: GPL-2.0 instead of GNU General Public License version 2.0
-  # See https://opensource.org/licenses/alphabetical
   license: GPL-3.0
-  # The license_family, i.e. "BSD" if license is "BSD-3-Clause". (optional)
   license_family: GPL
-  # It is strongly encouraged to include a license file in the package,
-  # (even if the license doesn't require it) using the license_file entry.
-  # See http://conda.pydata.org/docs/building/meta-yaml.html#license-file
   license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE.txt'
   summary: 'Hydrologic modeling framework'
 
-  # The remaining entries in this section are optional, but recommended
   description: |
     SUMMA is a hydrologic modeling framework that can be used for the
     systematic analysis of alternative model conceptualizations with
@@ -85,6 +54,4 @@ about:
 
 extra:
   recipe-maintainers:
-    # GitHub IDs for maintainers of the recipe.
-    # Always check with the people listed below if they are OK becoming maintainers of the recipe. (There will be spam!)
     - bartnijssen
