added missing LICENSE.txt

--- a/recipes/nappy/meta.yaml
+++ b/recipes/nappy/meta.yaml
@@ -32,7 +32,7 @@ about:
   home: https://github.com/cedadev/nappy
   license: BSD 3-Clause
   license_family: BSD
-  license_file: LICENSE
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE.txt'
   summary: A NASA AMes I/O package
 
 extra:
