--- a/recipes/udatetime/meta.yaml
+++ b/recipes/udatetime/meta.yaml
@@ -59,7 +59,7 @@ about:
   # It is strongly encouraged to include a license file in the package,
   # (even if the license doesn't require it) using the license_file entry.
   # See http://conda.pydata.org/docs/building/meta-yaml.html#license-file
-  license_file: LICENSE
+  # license_file: LICENSE
   summary: 'Fast RFC3339 compliant Python date-time library'
 
   # The remaining entries in this section are optional, but recommended
