Add local license file and skip windows builds

--- a/recipes/udatetime/meta.yaml
+++ b/recipes/udatetime/meta.yaml
@@ -31,6 +31,8 @@ build:
   # By default, the package will be built for the Python versions supported by conda-forge and for all major OSs.
   # Add the line "skip: True  # [py<35]" (for example) to limit to Python 3.5 and newer, or "skip: True  # [not win]" to limit to Windows.
   script: python setup.py install --single-version-externally-managed --record record.txt
+  # udatetime only supports posix platforms
+  skip: true  # [win]
 
 requirements:
   build:
@@ -59,7 +61,7 @@ about:
   # It is strongly encouraged to include a license file in the package,
   # (even if the license doesn't require it) using the license_file entry.
   # See http://conda.pydata.org/docs/building/meta-yaml.html#license-file
-  # license_file: LICENSE
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
   summary: 'Fast RFC3339 compliant Python date-time library'
 
   # The remaining entries in this section are optional, but recommended
