Fixed license name

--- a/recipes/httpagentparser/meta.yaml
+++ b/recipes/httpagentparser/meta.yaml
@@ -30,7 +30,7 @@ test:
 
 about:
   home: http://shon.github.com/httpagentparser
-  license: http://www.opensource.org/licenses/mit-license.php
+  license: MIT
   summary: Extracts OS Browser etc information from http user agent string
   license_family: MIT
   # license_file: LICENSE.txt  # https://github.com/shon/httpagentparser/pull/76
