added missing home url

--- a/recipes/r-reportr/meta.yaml
+++ b/recipes/r-reportr/meta.yaml
@@ -38,7 +38,7 @@ test:
     - "\"%R%\" -e \"library('reportr')\""  # [win]
 
 about:
-  home: https
+  home: https://cran.r-project.org/package=reportr
   license: GPL-2
   summary: Provides a system for reporting messages, which provides certain useful features over
     the standard R system, such as the incorporation of output consolidation, message
