--- a/recipes/r-phangorn/meta.yaml
+++ b/recipes/r-phangorn/meta.yaml
@@ -68,7 +68,7 @@ extra:
     - MathiasHaudgaard
     - FrodePedersen
     - ArneKr
-    - Johanneskoester
-    - Bgruening
-    - Daler
-    - Jdblischak
+    - johanneskoester
+    - bgruening
+    - daler
+    - jdblischak
